Updated portfolio info

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <header>
       <div class="avatar">YN</div>
       <div>
-        <h1>Your Name — Aspiring Cybersecurity Analyst</h1>
+        <h1>Ivon Macapla — Aspiring Cybersecurity Analyst</h1>
         <p class="lead">Linux | Incident Response | Threat Detection | Penetration Testing • Documenting my learning & lab projects</p>
       </div>
     </header>
@@ -57,7 +57,7 @@
       <main>
         <div class="card">
           <div class="section-title">About</div>
-          <p style="color:var(--muted); margin:10px 0 0;">I am transitioning into cybersecurity from IT operations with hands-on experience in networking, Linux, and security tooling. I focus on practical projects: lab-based incident response, vulnerability scanning, and small-scale red-team exercises. I enjoy documenting processes and building reproducible playbooks.</p>
+          <p style="color:var(--muted); margin:10px 0 0;">I started my career in telecommunications, where I gained hands-on experience in networking, fiber optic installation, troubleshooting, and IT operations. Over the years, I built a strong foundation in configuring wired and wireless LANs, managing FTTH deployments, and supporting enterprise systems. Working in telecom taught me how critical secure and reliable networks are and that inspired me to transition into cybersecurity. Today, I’m focused on building skills in threat detection, incident response, and penetration testing. I believe my background in telecom gives me a unique edge: I not only understand how networks are built and maintained, but also how to secure them against modern threats. I’m eager to apply this blend of technical knowledge and problem-solving to protect systems, data, and people in the cybersecurity field.</p>
         </div>
 
         <div style="height:16px"></div>
