--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
       <main>
         <div class="card">
           <div class="section-title">About</div>
-          <p style="color:var(--muted); margin:10px 0 0;">I started my career in telecommunications, where I gained hands-on experience in networking, fiber optic installation, troubleshooting, and IT operations. Over the years, I built a strong foundation in configuring wired and wireless LANs, managing FTTH deployments, and supporting enterprise systems. Working in telecom taught me how critical secure and reliable networks are and that inspired me to transition into cybersecurity. Today, I’m focused on building skills in threat detection, incident response, and penetration testing. I believe my background in telecom gives me a unique edge: I not only understand how networks are built and maintained, but also how to secure them against modern threats. I’m eager to apply this blend of technical knowledge and problem-solving to protect systems, data, and people in the cybersecurity field.</p>
+          <p style="color:var(--muted); margin:10px 0 0;">I have 6 years of experience in telecommunications, specializing in networking, FTTH installations, troubleshooting, and IT operations. During this time, I worked extensively with wired and wireless LANs, fiber optic deployments, and enterprise network support, which gave me a solid foundation in building and maintaining critical infrastructure.
+
+Over the years, I realized that network reliability is only as strong as its security, which sparked my passion for cybersecurity. I am now transitioning into the field, focusing on threat detection, incident response, penetration testing, and SIEM tools.My goal is to bring together my telecom background and cybersecurity training to defend networks from modern threats, combining practical technical skills with a proactive security mindset.</p>
         </div>
 
         <div style="height:16px"></div>
