--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="section-title">About</div>
           <p style="color:var(--muted); margin:10px 0 0;">I have 6 years of experience in telecommunications, specializing in networking, FTTH installations, troubleshooting, and IT operations. During this time, I worked extensively with wired and wireless LANs, fiber optic deployments, and enterprise network support, which gave me a solid foundation in building and maintaining critical infrastructure.
 
-Over the years, I realized that network reliability is only as strong as its security, which sparked my passion for cybersecurity. I am now transitioning into the field, focusing on threat detection, incident response, penetration testing, and SIEM tools.My goal is to bring together my telecom background and cybersecurity training to defend networks from modern threats, combining practical technical skills with a proactive security mindset.</p>
+Over the years, I realized that network reliability is only as strong as its security, which sparked my passion for cybersecurity. I am now transitioning into the field, focusing on threat detection, incident response, penetration testing, and SIEM tools. My goal is to bring together my telecom background and cybersecurity training to defend networks from modern threats, combining practical technical skills with a proactive security mindset.</p>
         </div>
 
         <div style="height:16px"></div>
@@ -117,7 +117,13 @@ Over the years, I realized that network reliability is only as strong as its sec
             <span class="tag">Penetration Testing</span>
             <span class="tag">Bash / Scripting</span>
             <span class="tag">Incident Response</span>
-            <span class="tag">Docker</span>
+            <span class="tag">FTTH Installation and Repair</span>
+            <span class="tag">Network Security</span>
+            <span class="tag">Business Continuity Planning</span>
+            <span class="tag">Disaster Recovery Planning</span>
+            <span class="tag">FTTH Installation and Repair</span>
+            <span class="tag">Ubuntu</span>
+            <span class="tag">Network Routing and Switching</span>
           </div>
         </div>
 
@@ -143,7 +149,7 @@ Over the years, I realized that network reliability is only as strong as its sec
     </div>
 
     <footer>
-      <div>Made with curiosity • GitHub: <a href="https://github.com/yourusername" target="_blank" rel="noopener" style="color:var(--accent); text-decoration:none">@yourusername</a></div>
+      <div>Made with curiosity • GitHub: <a href="https://github.com/macapla41" target="_blank" rel="noopener" style="color:var(--accent); text-decoration:none">@yourusername</a></div>
     </footer>
   </div>
 </body>
