--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 <body>
   <div class="wrap">
     <header>
-      <div class="avatar">YN</div>
+      <img src="profile.jpg" alt="My Profile Picture" width="120" style="border-radius: 12px;">
+      
       <div>
         <h1>Ivon Macapla — Aspiring Cybersecurity Analyst</h1>
         <p class="lead">Linux | Incident Response | Threat Detection | Penetration Testing • Documenting my learning & lab projects</p>
