--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
   <div class="wrap">
     <header>
-      <img src="profile.jpg" alt="My Profile Picture" width="120" style="border-radius: 12px;">
+      <img src="newphoto.jpg" alt="My Profile Picture" width="200" style="border-radius: 50%;">
       
       <div>
         <h1>Ivon Macapla — Aspiring Cybersecurity Analyst</h1>
