--- a/index.html
+++ b/index.html
@@ -99,9 +99,11 @@ Over the years, I realized that network reliability is only as strong as its sec
         <div class="card">
           <div class="section-title">Certifications & Training</div>
           <ul style="margin:8px 0 0 18px;color:var(--muted)">
-            <li>CompTIA Security+ (Planned Nov 2025)</li>
+            <li>Network Routing and Switching</li>
             <li>F1 NGN/FTTH End-to-End Installation</li>
             <li>Wired & Wireless LAN / FTTH standards</li>
+            <li>Data Analytics</li>
+            
           </ul>
         </div>
 
@@ -125,6 +127,8 @@ Over the years, I realized that network reliability is only as strong as its sec
             <span class="tag">FTTH Installation and Repair</span>
             <span class="tag">Ubuntu</span>
             <span class="tag">Network Routing and Switching</span>
+            <span class="tag">Wireshark</span>
+            <span class="tag">OSINT</span>
           </div>
         </div>
 
