--- a/index.html
+++ b/index.html
@@ -107,6 +107,33 @@ Over the years, I realized that network reliability is only as strong as its sec
           </ul>
         </div>
 
+                <div style="height:16px"></div>
+
+        <div class="card">
+          <div class="section-title">Professional Experience</div>
+          <ul style="margin:8px 0 0 18px;color:var(--muted)">
+            <li><strong>Telecommunications Specialist (6 years)</strong> — Managed FTTH installations, wired/wireless LAN troubleshooting, and enterprise networking support. 
+              <br>• Installed and maintained fiber optic connections, routers, and switches. 
+              <br>• Delivered technical support to enterprise clients, ensuring minimal downtime. 
+              <br>• Collaborated with cross-functional teams for large-scale network rollouts.
+            </li>
+            <li><strong>Workforce Management Associate</strong> — Oversaw staffing, scheduling, and operational continuity in a fast-paced environment.</li>
+            <li><strong>Marketing & Sales Executive</strong> — Applied business communication and client engagement skills, useful for cybersecurity client relations and risk communication.</li>
+          </ul>
+        </div>
+
+        <div style="height:16px"></div>
+
+        <div class="card">
+          <div class="section-title">Internships & Labs</div>
+          <ul style="margin:8px 0 0 18px;color:var(--muted)">
+            <li><strong>Cybersecurity Home Lab</strong> — Configured and monitored Wazuh SIEM with custom detection rules for Linux threats. Practiced log analysis and alert tuning.</li>
+            <li><strong>Penetration Testing Labs</strong> — Performed vulnerability scanning with Nikto, Nmap, and Metasploit. Documented findings in professional-style reports.</li>
+            <li><strong>Linux Hardening Practice</strong> — Applied CIS Benchmarks to secure Ubuntu systems, including firewall policies, systemd hardening, and auditing.</li>
+          </ul>
+        </div>
+
+
       </main>
 
       <aside>
