--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@ Over the years, I realized that network reliability is only as strong as its sec
               <br>• Delivered technical support to enterprise clients, ensuring minimal downtime. 
               <br>• Collaborated with cross-functional teams for large-scale network rollouts.
             </li>
-            <li><strong>Workforce Management Associate</strong> — Oversaw staffing, scheduling, and operational continuity in a fast-paced environment.</li>
-            <li><strong>Marketing & Sales Executive</strong> — Applied business communication and client engagement skills, useful for cybersecurity client relations and risk communication.</li>
+            
+            </li>
           </ul>
         </div>
 
@@ -181,7 +181,7 @@ Over the years, I realized that network reliability is only as strong as its sec
     </div>
 
     <footer>
-      <div>Made with curiosity • GitHub: <a href="https://github.com/macapla41" target="_blank" rel="noopener" style="color:var(--accent); text-decoration:none">@yourusername</a></div>
+      <div>Made with curiosity • GitHub: <a href="https://github.com/macapla41" target="_blank" rel="noopener" style="color:var(--accent); text-decoration:none">macapla41.github.io</a></div>
     </footer>
   </div>
 </body>
