--- a/index.html
+++ b/index.html
@@ -161,14 +161,16 @@ Over the years, I realized that network reliability is only as strong as its sec
 
         <div style="height:12px"></div>
 
-        <div class="card">
-          <div class="section-title">Contact</div>
-          <div class="contact">
-            <a class="btn btn-primary" href="https://github.com/yourusername" target="_blank" rel="noopener">View GitHub</a>
-            <a class="btn btn-ghost" href="https://www.linkedin.com/in/yourname" target="_blank" rel="noopener">LinkedIn</a>
-            <a class="btn btn-ghost" href="mailto:youremail@example.com">Email</a>
-            <a class="btn btn-ghost" href="resume.pdf" target="_blank">Download Resume (PDF)</a>
-          </div>
+       <div class="card">
+  <div class="section-title">Contact</div>
+  <div class="contact">
+    <a class="btn btn-primary" href="https://github.com/novcyber" target="_blank" rel="noopener">View GitHub</a>
+    <a class="btn btn-ghost" href="https://www.linkedin.com/in/ivon-macapla-126b4128b/" target="_blank" rel="noopener">LinkedIn</a>
+    <a class="btn btn-ghost" href="mailto:ivonmacapla@example.com">Email</a>
+    <a class="btn btn-ghost" href="files/ivonmacapla_resume.pdf" target="_blank">Download Resume (PDF)</a>
+  </div>
+</div>
+
         </div>
 
         <div style="height:12px"></div>
