--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@ Over the years, I realized that network reliability is only as strong as its sec
     <a class="btn btn-primary" href="https://github.com/novcyber" target="_blank" rel="noopener">View GitHub</a>
     <a class="btn btn-ghost" href="https://www.linkedin.com/in/ivon-macapla-126b4128b/" target="_blank" rel="noopener">LinkedIn</a>
     <a class="btn btn-ghost" href="mailto:ivonmacapla@example.com">Email</a>
-    <a class="btn btn-ghost" href="files/ivonmacapla_resume.pdf" target="_blank">Download Resume (PDF)</a>
+    <a class="btn btn-ghost" <a href="files/resume.pdf" target="_blank">Download Resume (PDF)</a>
+
   </div>
 </div>
 
